[#352] refactor: 검색어 자동완성 비동기 처리 폐기